# g-windows-print

./: README.md  pubspec.yaml
.github/workflows/: flutter-desktop-build.yml
example/: README.md  pubspec.yaml
example/.github/workflows/: flutter-desktop-build.yml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: g_windows_print.dart  g_windows_print_method_channel.dart  g_windows_print_platform_interface.dart
test/: g_windows_print_method_channel_test.dart  g_windows_print_test.dart
windows/: CMakeLists.txt  g_windows_print_plugin.cpp  g_windows_print_plugin.h  g_windows_print_plugin_c_api.cpp
windows/include/g_windows_print/: g_windows_print_plugin_c_api.h
windows/test/: g_windows_print_plugin_test.cpp
